Fixed CrsAdm, JumpButton
Added JumpButton

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -43,13 +43,13 @@
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    border-radius: 25px; /* Adding border-radius for rounded corners */
-    color: rgb(0, 0, 0); /* Setting text color to white */
-    z-index: 1; /* Ensure the button appears above the overlay */
+    border-radius: 25px;
+    color: rgb(0, 0, 0);
+    z-index: 1; 
 }
 
 .column h2 {
-    font-size: 75px; /* Set the font size for the titles */
+    font-size: 75px;
 }
 
 .button:hover {
@@ -59,15 +59,23 @@
 #scrollToTopBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
+    top: 20px;
     right: 20px;
-    background-color: #333;
-    color: white;
+    background-color: #bbbbd0;
+    color: rgb(29, 5, 250);
     border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
+    border-radius: 50%;
+    padding: 10px;
     cursor: pointer;
+    font-size: 16px;
+    z-index: 99;
   }
+  
+#scrollToTopBtn:hover {
+    background-color: #8ca4f8;
+
+}
+  
    
 #News .jumbotron h1.display-6 {
     font-size: 2rem; 
@@ -77,39 +85,50 @@
     padding: 50px;
 }
 
-.footer {
+footer {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 20px 0;
-    position: fixed;
+    padding: 20px;
     bottom: 0;
     width: 100%;
 }
 .crs{
-
+    color:#030608;
 }
 .adm{
     color:#030608;
 }
 
+.crsadm{
+    display: flex;
+    justify-content: space-between; 
+    flex-wrap: wrap;
+}
+
 .column1 {
+    flex: 1;
+    margin: 1px;
+    padding: 1px;
     background-image: linear-gradient(#1c1c1c65, #5661e1),url('../img/cbg1.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
-  }
+}
   
 .column2 {
+    
+    flex: 1;
+    margin: 1px;
+    padding: 1px;
     background-image: linear-gradient(#1c1c1c65, #5661e1),url('../img/cbg2.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    
-  }
+    background-size: cover;   
+}
+
   
-  .column {
+.column {
     width: 50%;
     height: 800px;
     display: flex;
@@ -121,7 +140,7 @@
     text-align: center;
     box-sizing: border-box;
     position:relative;
-  }
+}
 
 .info{
     color: white;
